service.yml
apiVersion: v1
kind: Service
metadata:
  
  name: reddit-clone-service
  namespace: reddit
spec:
  selector:
    # Selector for Pods
    app: reddit-clone
  type: NodePort
  # We are using NodePort service which is directly
  # accessible from outside the cluster, other types of services
  # are ClusterIP, LoadBalancer
  ports:
    # Port is the port service is gonna listen to
  - port: 3000
    # Target port is the port container is listening to
    targetPort: 3000
    nodePort: 30007
    protocol: TCP
